Extension library is created

--- a/net-framework/NetFrame/Common/NetFrame.Common.Extension/NetFrame.Common.Extension.csproj
+++ b/net-framework/NetFrame/Common/NetFrame.Common.Extension/NetFrame.Common.Extension.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetFrame.Common.Exception\NetFrame.Common.Exception.csproj" />
+  </ItemGroup>
+
 </Project>
