--- a/net-framework/NetFrame/NetFrame.Infrastructure/NetFrame.Infrastructure.csproj
+++ b/net-framework/NetFrame/NetFrame.Infrastructure/NetFrame.Infrastructure.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="CompareNETObjects" Version="4.78.0" />
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="Npgsql" Version="7.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
   </ItemGroup>
 
   <ItemGroup>
