--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -29,7 +29,7 @@ jobs:
         uses: security-code-scan/security-code-scan-add-action@f8ff4f2763ed6f229eded80b1f9af82ae7f32a0d
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet --source ~/net-framework/NetFrame restore
 
       - name: Build
         run: dotnet build --source ~/net-framework/NetFrame --no-restore
