--- a/.github/workflows/securitycodescan.yml
+++ b/.github/workflows/securitycodescan.yml
@@ -29,10 +29,10 @@ jobs:
         uses: security-code-scan/security-code-scan-add-action@f8ff4f2763ed6f229eded80b1f9af82ae7f32a0d
 
       - name: Restore dependencies
-        run: dotnet --source D:\a\dapper-stack\dapper-stack\net-framework\NetFrame restore
+        run: dotnet restore
 
       - name: Build
-        run: dotnet build --source D:\a\dapper-stack\dapper-stack\net-framework\NetFrame --no-restore
+        run: dotnet build --no-restore
 
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@cdb3d5e639054395e45bf401cba8688fcaf7a687
